# checkconsents

./: .dockerignore  .gitignore  Dockerfile  README.md  checkconsents.py  commandes_saisies.txt  compose-dev.yml  dev.docker.bashrc  entrypoint.sh  etapes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
consentforms/: __init__.py  checkconsents.py
consentforms/images/: __init__.py
consentforms/logutils/: __init__.py
consentforms/omr/: __init__.py
consentforms/templates/: __init__.py
detect_checkboxes/: __init__.py
detect_correct_template/: __init__.py
detect_orientation/: __init__.py
docs/: docker-image-sbom.md  docker-image-vulnerabilities.md
logutils/: __init__.py
resources/: checkconsents_config.yml
resources/templates/: Consentement_MR_foetus_decede.txt
scripts/: consents_json2csv.py
simpleomr/: __init__.py
tests/: conftest.py  test_images.py  test_omr.py  test_templates.py
