[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "consentforms"
authors = [
    {name = "Adrien Josso Rigonato", email = "adrien.josso-rigonato@genomecad.fr"},
    {name = "David Salgado", email = "david.salgado@genomecad.fr"}
]
maintainers = [
    {name = "Adrien Josso Rigonato", email = "adrien.josso-rigonato@genomecad.fr"},
    {name = "David Salgado", email = "david.salgado@genomecad.fr"}
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">=3.12"
keywords = ["OMR"]
dependencies = [ #TODO define this section
    "schema >=0.7.5",
    "PyYAML >=6.0.1",
    "pydantic >=2.4",
    "jsonschema >=4.19.1",
    "prettyprinter >=0.18.0",
    "pytesseract >=0.3.10",
    "imutils >=0.5.4",
    "opencv-python >=4.8.1.78",
    "cdifflib >=1.2.6",
    "scipy >=1.11.3",
    "lxml >=4.9.3",
]

[project.optional-dependencies] #TODO define this section
test = [
    "pytest >=7.4.3",
    "pytest-cov",
]
doc = ["sphinx"]

[project.urls] #TODO define this section
Home = "https://github.com/"
